--- a/web/templates/login.tmpl
+++ b/web/templates/login.tmpl
@@ -50,6 +50,7 @@
 <div class="container main-content">
   <form class="pure-form pure-form-stacked" method="POST">
     <h3 class="form-signin-heading">Register</h3>
+    <p>Already have an account? <a href="/login">Sign in</a>
     <div class="form-group">
       <label for="register_name">Name</label>
       <input id="register_name" name="register_name" class="form-control" placeholder="Your name" required autofocus>
