--- a/web/templates/index.tmpl
+++ b/web/templates/index.tmpl
@@ -17,7 +17,7 @@
       <p>Create a goal, set a target, and add some data. Transverse will then use time series models to forecast your progress.</p>
     </div>
     <div class="pure-u-1 pure-u-sm-1-3">
-      <img src="/img/landing-forecast.png"/>
+      <img src="{{ .CDNDomain }}/img/landing-forecast.png"/>
     </div>
   </div>
 
@@ -27,7 +27,7 @@
       <p>You can create a goal for anything you can get a measurement from.</p>
     </div>
     <div class="pure-u-1 pure-u-sm-1-3">
-      <img src="/img/landing-screenshot.png"/>
+      <img src="{{ .CDNDomain }}/img/landing-screenshot.png"/>
     </div>
   </div>
 
