--- a/web/templates/index.tmpl
+++ b/web/templates/index.tmpl
@@ -1,63 +1,44 @@
 {{- define "index" -}}
 {{- template "header" . -}}
 
-  <div class="app-container">
-    <div class="tv-menu">
-      <div class="tv-menu-top">
-        <h1 class="tv-site-logo"><a href="/">Transverse</a></h1>
-        <div id="tv-dropdown-hamburger" class="tv-hamburger" onclick='toggleMenu()'>
-          <div class="tv-hamburger-bar1"></div>
-          <div class="tv-hamburger-bar2"></div>
-        </div>
-        <div class="tv-menu-items">
-          <ul>
-            <li><a href="/app">App</a></li>
-            <li><a href="/register">Register</a></li>
-          </ul>
-        </div>
-      </div>
-      <div id="tv-dropdown-items">
-        <ul>
-          <li><a href="/app">App</a></li>
-          <li><a href="/register">Register</a></li>
-        </ul>
-      </div>
+<div class="tv-landing-header-img">
+</div>
+<div class="tv-landing-header-content">
+  <h1 class="tv-landing-header"><span>Transverse</span> tells you when you’re going to reach your goals.</h1>
+  <div class="tv-get-started-button-container">
+    <a class="pure-button pure-button-primary" href="/register">Get started</a>
+  </div>
+</div>
+
+<div class="tv-landing-details">
+  <div class="pure-g tv-landing-details-section">
+    <div class="pure-u-1 pure-u-sm-2-3">
+      <h2>How it works</h2>
+      <p>Create a goal, set a target, and add some data. Transverse will then use time series models to forecast your progress.</p>
     </div>
-    <div class="container landing align-middle">
-      <h1>Transverse</h1>
-      <p>helps you track your goals.</p>
-
-      <img
-        class="landing-image"
-        src="{{ .CDNDomain }}/img/landing-forecast.png"
-        width=671
-        style="max-width: 100%"
-        />
+    <div class="pure-u-1 pure-u-sm-1-3">
+      <img src="{{ .CDNDomain }}/img/landing-forecast.png"/>
     </div>
+  </div>
 
-    <div class="container">
-      <h4 class="tv-landing-section-heading">How it works</h4>
-      <ol>
-        <li>Create a goal</li>
-        <li>Add data</li>
-        <li>Get a forecast</li>
-      </ol>
+  <div class="pure-g tv-landing-details-section">
+    <div class="pure-u-1 pure-u-sm-2-3">
+      <h2>Track anything</h2>
+      <p>You can create a goal for anything you can get a measurement from.</p>
     </div>
-
-    <div class="container">
-      <h4 class="tv-landing-section-heading">Status</h4>
-      <p>Transverse is under maintenance for now, so it is disabled. Check back soon.<p>
+    <div class="pure-u-1 pure-u-sm-1-3">
+      <img src="{{ .CDNDomain }}/img/landing-screenshot.png"/>
     </div>
+  </div>
 
-  </div> <!-- .app-container -->
+  <div class="pure-g tv-landing-details-section">
+    <div class="pure-u-1 pure-u-sm-2-3">
+      <h2>Get started</h2>
+      <p>Either <a href="/register">register</a> a new account or <a href="/login">sign in</a>.</p>
+    </div>
+  </div>
+</div>
 
-  <script>
-    function toggleMenu() {
-      console.log("toggleMenu()");
-      document.getElementById("tv-dropdown-items").classList.toggle("active");
-      document.getElementById("tv-dropdown-hamburger").classList.toggle("active");
-    }
-  </script>
-
+<div style="clear: both"></div>
 {{- template "footer" . -}}
 {{- end -}}
