swap out goals list filter button

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -130,6 +130,10 @@ a {
   margin: 0 0 1rem 0;
 }
 
+.tv-goals-list-filter {
+  margin: 1rem 0;
+}
+
 .tv-goal-list-item {
   margin-bottom: 0.5rem;
 }
