--- a/web/css/style.css
+++ b/web/css/style.css
@@ -309,6 +309,20 @@ footer a {
   cursor: default;
 }
 
+.tv-spinner {
+  height: 20px;
+  width: 20px;
+  border: 4px solid #8798A3;
+  border-radius: 50%;
+  border-left-color: #A4B1BA;
+  animation: tv-spin 0.5s linear infinite;
+}
+
+@keyframes tv-spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 #hw-widget {
   display: inline-block;
   height: 22px;
