--- a/web/templates/index.tmpl
+++ b/web/templates/index.tmpl
@@ -14,7 +14,7 @@
   <div class="pure-g tv-landing-details-section">
     <div class="pure-u-1 pure-u-sm-2-3">
       <h2>How it works</h2>
-      <p>Create a goal, set a target, and add some data. Transverse will then use time series models to forecast your progress.</p>
+      <p>Create a goal, set a target, and add some data. Transverse then uses time series models to forecast your progress and calculate ETAs.</p>
     </div>
     <div class="pure-u-1 pure-u-sm-1-3">
       <img src="{{ .CDNDomain }}/img/landing-forecast.png"/>
@@ -24,7 +24,7 @@
   <div class="pure-g tv-landing-details-section">
     <div class="pure-u-1 pure-u-sm-2-3">
       <h2>Track anything</h2>
-      <p>You can create a goal for anything you can get a measurement from.</p>
+      <p>You can create a goal for anything you can get a measurement from. Examples include reading progress, typing speed, running times, and anything else you can track on a daily basis.</p>
     </div>
     <div class="pure-u-1 pure-u-sm-1-3">
       <img src="{{ .CDNDomain }}/img/landing-screenshot.png"/>
