--- a/web/templates/footer.tmpl
+++ b/web/templates/footer.tmpl
@@ -2,7 +2,7 @@
 
     <footer class="footer">
       <div class="container">
-        <span class="text-muted">Status: <strong>Under Maintenance</strong>
+        <span class="text-muted">Version <strong>{{ .CDNVersion }}</strong>
         <br />
         Copyright &copy; 2019 Preetam Jinka.</span>
         <br/>
