build Docker images on push

--- a/ansible/roles/metadata/templates/transverse-metadata.j2
+++ b/ansible/roles/metadata/templates/transverse-metadata.j2
@@ -1,5 +1,5 @@
 #!/bin/sh
-docker run --rm --publish=4000:4000 -v /data:/data --entrypoint /bin/transverse/metadata preetamjinka/transverse:latest \
+docker run --rm --publish=4000:4000 -v /data:/data --entrypoint /bin/transverse/metadata preetamjinka/transverse:{{build_sha}} \
   -data-dir=/data/transverse-metadata \
   -listen=0.0.0.0:4000 \
   -token={{metadata_token}} \
