--- a/ansible/roles/web/templates/transverse-web.j2
+++ b/ansible/roles/web/templates/transverse-web.j2
@@ -1,5 +1,5 @@
 #!/bin/sh
-docker run --rm -w /bin/transverse/web --publish=4001:4001 --entrypoint /bin/transverse/web/web preetamjinka/transverse:latest \
+docker run --rm -w /bin/transverse/web --publish=4001:4001 --entrypoint /bin/transverse/web/web preetamjinka/transverse:{{build_sha}} \
   -addr={{web_listen_address}} \
   -metadata-addr="https://{{metadata_caddy_address}}" \
   -metadata-token={{metadata_token}} \
