--- a/ansible/roles/metadata/templates/transverse-metadata.j2
+++ b/ansible/roles/metadata/templates/transverse-metadata.j2
@@ -1,6 +1,7 @@
 #!/bin/sh
-docker stop transverse-web
-docker run --name transverse-web --rm --publish=4000:4000 -v /data:/data --entrypoint /bin/transverse/metadata preetamjinka/transverse:{{build_sha}} \
+docker kill transverse-metadata
+docker rm transverse-metadata
+docker run --name transverse-metadata --rm --publish=4000:4000 -v /data:/data --entrypoint /bin/transverse/metadata preetamjinka/transverse:{{build_sha}} \
   -data-dir=/data/transverse-metadata \
   -listen=0.0.0.0:4000 \
   -token={{metadata_token}} \
